@@ -8,9 +8,14 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 
+EB-2010-03-21-0: Bugfix:      Perl JSV script does not allow comma in CMDNAME 
+                              and CMDARGS 
+                 Issues:      GE-3399
+                 Review:      DG 
+
 EB-2010-03-18-0: Bugfix:      ENABLE_RESCHEDULE_SLAVE=1 doesn't work anymore
                  Issues:      GE-3310
-                 Review:      TBD
+                 Review:      DG 
 
 DG-2011-03-18-0: Cleanup:     aimk help and qconf -help output
 
